fdo#50603: Close fds across a restart of soffice on Mac OS X

...where the restart is directly from the old soffice instance, via exec, so the
restarted soffice would inherit all open fds from the old one.  The easiest
approach appears to close fds upon startup.

Change-Id: I89bb1c78f3adf2da1cd3cbd58c22df276133a883